Bug 156018 - SVG: css style fails with element inside element
Summary: SVG: css style fails with element inside element
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-22 13:43 UTC by Xisco Faulí
Modified: 2023-06-22 20:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (331 bytes, image/svg+xml)
2023-06-22 13:43 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-06-22 13:43:13 UTC
Created attachment 188056 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Left rectangle should be green and right one blue

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b0c2e580a1c5b055295d303ebb9c9e905ab4890c
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 IvoErMejo 2023-06-22 14:02:30 UTC
I opened the attachment with draw and I can see 2 bue rectangle.
If I open the attachment with a browser, it's all ok
Comment 2 Commit Notification 2023-06-22 17:51:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/079cd3429ace2f9568d42368bb0c56487335d44d

tdf#156018: check if there is a css style with element inside element

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-22 20:27:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e29f25d3e3894b8febe6a18a1ba896ffb3590dc6

tdf#156018: check if there is a css style with element inside element

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.