tdf#156018: check if there is a css style with element inside element

Change-Id: I54fa5bea42560eec5ae51dd7ba07de11f418c75c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153466
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>